--- a/wish/diwali/templates/diwali/diwali.html
+++ b/wish/diwali/templates/diwali/diwali.html
@@ -7,10 +7,15 @@
     <title>Diwali</title>
 </head>
 <body>
-    Happy Diwali
-    <form action="" method="GET">
+    {% if name %}
+        {{name}} ki tarf se aap sbhi ko happy diwali
+    {% else %}
+        Happy Diwali
+    {% endif %}
+    <form action="" method="POST">
+        {% csrf_token %}
         <label for="name">Name:</label>
-        <input type="text" id="name" placeholder="Enter your name">
+        <input type="text" id="name" name="name" placeholder="Enter your name">
         <button type="submit">Go</button>
     </form>
 </body>
