add wishing audio for chhath

--- a/wish/chhath/templates/chhath/wish.html
+++ b/wish/chhath/templates/chhath/wish.html
@@ -32,6 +32,8 @@
                 <input type="text" class="name_input" name="name" placeholder="यहाँ अपना नाम लिखें....">
                 <button class="btn" type="submit">देखें</button>
             </form>
+            <audio autoplay hidden src="{% static 'chhath\audios\wish.mp3' %}"></audio>
+            <!-- <audio autoplay hidden src="{% static 'chhath\audios\chhath.mp3' %}"></audio> -->
             <p class="copyright">Copyright © 2021 Satyam Seth</p>
         </div>
     </div>
